gl31-master/src/test/deca/codegen/valid/sansobjet/int_overflow.deca
// Description:
//    Test le dépassement (reboucle)
//
// Resultats:
//    Succes : affiche '-2147483648'
// 
// Historique:
//    cree le 15/01/2021
{
    int i = 2147483647;
    i = i + 1;
    print(i);
}
